<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item
        android:id="@+id/save_order"
        android:icon="@drawable/icon_save_order"
        android:orderInCategory="1"
        android:title="@string/save_my_order"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/split_payment"
        android:icon="@drawable/icon_split_payment"
        android:orderInCategory="2"
        android:title="@string/split_between"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/use_coupon"
        android:orderInCategory="3"
        android:title="@string/coupon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/change_direction"
        android:orderInCategory="100"
        android:title="@string/direction"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/service_number"
        android:orderInCategory="100"
        android:title="@string/service_no"
        app:showAsAction="ifRoom"/>
</menu>