<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPizza"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        >

        <LinearLayout
            android:id="@+id/pizza_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/purple_700"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:id="@+id/nombre_print"
                android:layout_margin="7dp"
                />

            <TextView
                android:id="@+id/textview_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/su_pizza"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_margin="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tamanio"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:layout_margin="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/group_size_pizza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_chica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chica"
                        android:layout_margin="5dp" />
                    <RadioButton
                        android:id="@+id/radio_mediana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mediana"
                        android:layout_margin="5dp"/>
                    <RadioButton
                        android:id="@+id/radio_grande"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grande"
                        android:layout_margin="5dp"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientes"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:layout_margin="7dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <CheckBox
                    android:id="@+id/pizza_ingr_jamon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jamon"
                    android:layout_margin="5dp"/>
                <CheckBox
                    android:id="@+id/pizza_ingr_pepperoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni"
                    android:layout_margin="5dp"/>
                <CheckBox
                    android:id="@+id/pizza_ingr_pinia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pinia"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <CheckBox
                    android:id="@+id/pizza_ingr_jalapenio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jalapenio"
                    android:layout_margin="5dp"/>
                <CheckBox
                    android:id="@+id/pizza_ingr_chorizo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chorizo"
                    android:layout_margin="5dp"/>
                <CheckBox
                    android:id="@+id/pizza_ingr_tocino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tocino"
                    android:layout_margin="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <Switch
                android:id="@+id/switch_orilla_queso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orilla_con_queso"
                android:textSize="16dp"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON"
                android:layout_margin="7dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descuento"
                android:minHeight="15dp"
                />
            <EditText
                android:id="@+id/edit_cupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textVisiblePassword"
                android:minHeight="48dp"
                android:text="@string/codigo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <Button
                android:id="@+id/buttonPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pagar"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
    <!-- androidx.constraintlayout.widget.ConstraintLayout -->