<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedido"
            android:minHeight="15dp"
            />

        <EditText
            android:id="@+id/editOrderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nombre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/pizza"
                    />

                <Button
                    android:id="@+id/buttonPizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/pizza"
                    android:textSize="17dp" />
                <!--android:onClick="pantallaPizza"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/recibos"
                    />
                <Button
                    android:id="@+id/buttonRecibos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recibos"
                    android:layout_margin="10dp"
                    android:textSize="17dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>